# mini-llm-d

./: Makefile  README.md  custom-metrics.yaml  deployment.yaml  hpa.yaml  load_test.py  metrics.py  profile.py  pyproject.toml  requirements.txt  router.py  server.py  service.yaml  setup.sh
benchmarks/: load_test.py  nccl_tp_bench.py  profile.py  rdma_kv_bench.py  requirements.in  requirements.txt  routing_comparison.py
inference/: Dockerfile  config.yaml  pyproject.toml  requirements.in  server.py
k8s/: custom-metrics.yaml  deployment-rdma.yaml  deployment.yaml  grafana-values.yaml  hpa.yaml  jaeger.yaml  rdma-device-plugin.yaml  service.yaml  wva.yaml
k8s/grafana-dashboards/: mini-llmd.json
rdma/: __init__.py  kv_transfer.py  nccl_init.py
rdma/rdma_exporter/: exporter.py
results/: .gitkeep  nccl_throughput.json  rdma_kv_latency.json
router/: Dockerfile  metrics.py  prefix_cache.py  pyproject.toml  requirements.in  router.py
scripts/: build-images.sh  cluster-up.sh  deploy.sh
