# router/pyproject.toml
#
# Dependencies for the mini-llmd request router.
# No GPU required — CPU-only container.

[project]
name = "mini-llmd-router"
version = "0.1.0"
description = "Prefix-cache aware request router for mini-llm-d"
requires-python = ">=3.11,<3.13"

dependencies = [
    # Serving
    "fastapi==0.111.0",
    "uvicorn[standard]==0.30.1",

    # Async HTTP client (pod scraping + request proxying)
    "httpx==0.27.0",

    # Prefix hashing (must match inference pod)
    "xxhash==3.4.1",

    # Metrics
    "prometheus-client==0.20.0",

    # Observability
    "opentelemetry-api==1.24.0",
    "opentelemetry-sdk==1.24.0",
    "opentelemetry-exporter-otlp-proto-grpc==1.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# No special index overrides needed — all CPU packages, resolves from PyPI.
